# Homework_webpython_09

./: README.md  authors.json  config.ini  connector.py  main.py  models.py  pyproject.toml
homework9/: scrapy.cfg
homework9/homework9/: items.py  middlewares.py  pipelines.py  settings.py
homework9/homework9/spiders/: authors.py
